# jumpie

./: .goreleaser.yml  Cargo.toml  README.md
.github/workflows/: main.yml  release.yml
src/: main.rs
